a few minor fixes